infrastructure/controllers/base/rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
    - host: rancher.thefoxnet.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cattle-system-rancher
                port:
                  number: 443
  tls:
    - hosts:
        - rancher.thefoxnet.co.uk
      secretName: rancher-tls
